skills nearly complete
missing checks for accurate selection count and addition to form.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -984,42 +984,42 @@
                         <div class="col-xs-12>"><h3>Languages</h3></div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-disabled="commonDisabled"ng-checked="commonSelected"> Common
+                                <input type="checkbox" ng-disabled="commonDisabled" ng-checked="commonSelected"> Common
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-checked="dwarvishSelected"> Dwarvish
+                                <input type="checkbox"  ng-disabled="dwarvishDisabled" ng-checked="dwarvishSelected"> Dwarvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-checked="elvishSelected"> Elvish
+                                <input type="checkbox"  ng-disabled="elvishDisabled" ng-checked="elvishSelected"> Elvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-checked="giantishSelected"> Giant
+                                <input type="checkbox"  ng-disabled="giantDisabled" ng-checked="giantSelected"> Giant
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-checked="gnomishSelected"> Gnomish
+                                <input type="checkbox"  ng-disabled="gnomishDisabled" ng-checked="gnomishSelected"> Gnomish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-checked="goblinishSelected"> Goblin
+                                <input type="checkbox"  ng-disabled="goblinDisabled" ng-checked="goblinSelected"> Goblin
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-checked="halflingishSelected"> Halfling
+                                <input type="checkbox"  ng-disabled="halflingDisabled" ng-checked="halflingSelected"> Halfling
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-checked="orcishSelected"> Orcish
+                                <input type="checkbox"  ng-disabled="orcishDisabled" ng-checked="orcishSelected"> Orcish
                             </label>
                         </div>
                     </div> 
